# cppprojecttemplate

./: .gitignore  CMakeLists.txt  Doxyfile.in  LICENSE  README.md
buildsys/: FindClang.cmake  FindGitstats.cmake  FindGraphviz.cmake  FindPqxx.cmake  FindSloccount.cmake
src/lib/: CMakeLists.txt
src/lib/apps/app/: CMakeLists.txt  action.cxx  action.hxx  actionforavailabledatabase.cxx  actionforavailabledatabase.hxx  actionforconnecteddatabase.cxx  actionforconnecteddatabase.hxx  actionforunavailabledatabase.cxx  actionforunavailabledatabase.hxx  app.cxx  app.hxx  config.hxx.in  databaseaction.cxx  databaseaction.hxx  settings.cxx  settings.hxx
src/lib/core/: #CMakeLists.txt#  config.hxx.in  tools.cxx  tools.hxx  types.hxx
src/lib/core/test/: CMakeLists.txt  tst_coremodule.cxx  tst_name.cxx  tst_tools.cxx  tst_uuid.cxx
src/lib/db/: CMakeLists.txt
src/lib/db/pgconn/: CMakeLists.txt  config.hxx.in  connection.cxx  connection.hxx  connectiondata.cxx  connectiondata.hxx
src/lib/infrastructure/core/: config.hxx.in  tools.cxx  tools.hxx  types.hxx
src/lib/infrastructure/core/test/: tst_tools.cxx
src/lib/models/model/: CMakeLists.txt  config.hxx.in  model.cxx  model.hxx
src/lib/models/model/test/: CMakeLists.txt  tst_model.cxx
src/lib/ui/widgets/: CMakeLists.txt  config.hxx.in  databaseconnectiondatadialog.cxx  databaseconnectiondatadialog.hxx  databaseconnectionstatuslabel.cxx  databaseconnectionstatuslabel.hxx  databasenameedit.cxx  databasenameedit.hxx  databaseusernameedit.cxx  databaseusernameedit.hxx  dialog.cxx  dialog.hxx  fieldlabel.cxx  fieldlabel.hxx  gridgroupbox.cxx  gridgroupbox.hxx  groupbox.cxx  groupbox.hxx  hostnameedit.cxx  hostnameedit.hxx  intedit.cxx  intedit.hxx  label.cxx  label.hxx  lineedit.cxx  lineedit.hxx  mainwindow.cxx  mainwindow.hxx  menu.cxx  menu.hxx  passwordedit.cxx  passwordedit.hxx  portedit.cxx  portedit.hxx  statuslabel.cxx  statuslabel.hxx  verticaldialog.cxx  verticaldialog.hxx
templates/: CMakeLists.library.txt  CMakeLists.subdirs.txt  CMakeLists.test.txt  config.hxx.in
